# Forward_INS_Mechanization

./: .gitignore  CMakeLists.txt  README.md  intergrated_test.cpp  mech_test.cpp
include/: intergratedNav.h  mech.h  mech_utils.hpp
src/: CMakeLists.txt  intergratedNav.cpp  mech.cpp
